--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #99D9EA;
+    //background-color: #99D9EA;
+    background-color: #7c5098;
 }
 
 .carousel-container {
