--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     //background-color: #99D9EA;
-    background-color: #7c5098;
+    background-color: #591E8C;
 }
 
 .carousel-container {
